--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <title>Eventex - O maior encontro hacker do mundo!</title>
+        <title>Eventex - Risos!</title>
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
